--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-¡¡¡¡---
-¡¡¡¡layout: default
-¡¡¡¡title: my Blog
-¡¡¡¡---
-¡¡¡¡<h2>{{ page.title }}</h2>
-¡¡¡¡<p>×îÐÂÎÄÕÂ</p>
-¡¡¡¡<ul>
-¡¡¡¡¡¡¡¡{% for post in site.posts %}
-¡¡¡¡¡¡¡¡¡¡¡¡<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-¡¡¡¡¡¡¡¡{% endfor %}
-¡¡¡¡</ul>
+ã€€ã€€---
+ã€€ã€€layout: default
+ã€€ã€€title: my Blog
+ã€€ã€€---
+
+ã€€ã€€<p>æœ€æ–°æ–‡ç« </p>
+ã€€ã€€
